* Changes below here added in 4.0.0-beta.13
* Upgrade JSSC Serial library to 2.9.2
* Enforce 255 character limit for tag keys and values in validation
* Remove custom el security expressions hasDataSourcePermission, hasDataSourceXidPermission, hasDataPointXidReadPermission, hasDataPointXidsReadPermission, hasDataPointXidsSetPermission

*Version 3.7.4*
* Improve work item failure logging
* Fix DWR bug in legacy UI where module was not being assigned to the DWR upon creation
* Fix bug in User JSON importer where new users could not be created
* Fix bug where publishing lifecycle events when runtime context was closed could cause problems

*Version 3.7.3*
* Fix bug in leagcy UI introduced in 3.7.0 where loading module UI resources was not working
* Fix bug in H2 conversion to version 199 that could corrupt the database if the upgrade failed

*Version 3.7.2*
* Fix bug in upgrade script for schema version 28, use case insensitive comparison for email addresses
* Fix invalid date encoding in the configuration import/export JSON

*Version 3.7.1*
* Fix bug in MySQL where system settings were not being saved
* Disable Quality of Service filter by default
* Disable Denial of Service filter by default
* Disable Low Resource Manager by default

*Version 3.7.0*
* Add organization field to User with limit of 80 chars
* Add organizationalRole field to User with limit of 80 chars
* Track created date/time of a User, all existing users will have a created date of the upgrade date
* Add ability to verify the email address for a User and track the date it was verified
* Add general use JSON object to all Users to store custom data
* IMPORTANT the User data column in the database is of type JSON for MySQL which is only supported in version 5.7.8 and above
* IMPORTANT Email addresses are now required to be unique across all users, ensure you have no duplicates before this upgrade otherwise duplicates will be modified and their username and id will be logged