@@ -416,9 +416,10 @@ ALTER TABLE jsonData ADD CONSTRAINT jsonDataFk2 FOREIGN KEY (editPermissionId) R
 -- InstalledModules
 --  Thirty character restriction is from the store
 CREATE TABLE installedModules (
-	name nvarchar(30) not null,
-	version nvarchar(255) not null,
-    upgradedTimestamp    BIGINT       NOT NULL
+    name              NVARCHAR(30)  NOT NULL,
+    version           NVARCHAR(255) NOT NULL,
+    upgradedTimestamp BIGINT        NOT NULL,
+    buildTimestamp    BIGINT        NOT NULL
 );
 ALTER TABLE installedModules ADD CONSTRAINT installModulesUn1 UNIQUE (name);
 
