@@ -18,7 +18,6 @@ import java.util.Set;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
-import org.checkerframework.checker.nullness.qual.Nullable;
 import org.springframework.core.OrderComparator;
 
 import com.github.zafarkhaja.semver.Version;
@@ -289,7 +288,7 @@ public class Module {
         return version;
     }
 
-    public @Nullable Date getBuildDate() {
+    public Date getBuildDate() {
         return buildDate;
     }
 
