@@ -110,6 +110,8 @@
 * Upgrade JSSC Serial library to 2.9.2
 * Enforce 255 character limit for tag keys and values in validation
 * Remove custom el security expressions hasDataSourcePermission, hasDataSourceXidPermission, hasDataPointXidReadPermission, hasDataPointXidsReadPermission, hasDataPointXidsSetPermission
+* Database upgrade that adds buildTimestamp column to installedModules table
+* Modules now require a buildTimestamp property in their module.properties file
 
 *Version 3.7.4*
 * Improve work item failure logging
